--- a/random-game/game-styles.css
+++ b/random-game/game-styles.css
@@ -15,6 +15,7 @@
 
 .simple-menu {
     list-style: none;
+    padding: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -50,6 +51,7 @@
     transform-origin: 50% 100%;
     transform: scale(1.5) perspective(500px) rotateX(45deg);
     transform-style: preserve-3d;
+    z-index: 0;
 }
 
 .cell {
@@ -57,8 +59,15 @@
     height: 50px;
     background-color: darkgray;
     position: relative;
+    /*z-index: 0;*/
     transform-style: preserve-3d;
+    transition: box-shadow 0.3s;
 }
+
+.cell::after {
+    transition: opacity 0.3s, transform 0.3s;
+}
+
 
 .cell.movement {
     box-shadow: inset 0 0 10px 2px cyan;
@@ -70,17 +79,45 @@
     box-shadow: inset 0 0 10px 2px deepskyblue;
 }
 
+.cell.targetable {
+    z-index: 10;
+}
+
+.cell.targetable::after {
+    content: "";
+    position: absolute;
+    --target-color: crimson;
+    opacity: 0.6;
+    width: calc(100% + 5px);
+    height: calc(100% + 5px);
+    left: -2.5px;
+    top: -2.5px;
+    background-color: var(--target-color);
+    -webkit-mask: url("./assets/game/svg/target.svg") 50% 50%/contain no-repeat;
+    mask: url("./assets/game/svg/target.svg") 50% 50%/contain no-repeat
+}
+.cell.targetable:hover::after {
+    cursor: pointer;
+    opacity: 1;
+    transform: scale(1.5);
+}
+
 .pawn {
     width: 30px;
     height: 40px;
     position: absolute;
     bottom: 15px;
     left: 5px;
-    background-color: red;
+    background-color: lightgray;
     transform-origin: 50% 100%;
     transform-style: preserve-3d;
     transform: rotateX(-45deg);
 }
+
+.pawn.targetable {
+
+}
+
 .cell:hover .pawn {
     bottom: 15px;
     left: 5px;
@@ -89,4 +126,8 @@
 .pawn:hover {
     cursor: pointer;
     background-color: darkgreen;
+}
+/* Maybe styling on hover will get more difficult*/
+.pawn.targetable:hover {
+    filter: hue-rotate(90deg);
 }
