--- a/random-game/game-styles.css
+++ b/random-game/game-styles.css
@@ -66,6 +66,15 @@
     transition: box-shadow 0.3s;
 }
 
+/*.cell::before {*/
+/*    position: absolute;*/
+/*    top: -10px;*/
+/*    width: 40px;*/
+/*    height: 10px;*/
+/*    left: 0;*/
+/*    content: attr(data-pf);*/
+/*}*/
+
 .cell::after {
     transition: opacity 0.3s, transform 0.3s;
 }
