--- a/random-game/game-styles.css
+++ b/random-game/game-styles.css
@@ -38,6 +38,28 @@
     border: 2px solid black;
 }
 
+.game .scrollable {
+    flex-grow: 1;
+    flex-shrink: 1;
+    width: 100%;
+    overflow-y: auto;
+}
+
+.game .manual {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+}
+
+.game .manual .simple-menu {
+    font-size: 20px;
+    height: auto;
+}
+
+
 .simple-menu {
     list-style: none;
     padding: 0;
@@ -59,6 +81,47 @@
     cursor: pointer;
     transform: scale(1.1);
     text-shadow: 0 0 5px goldenrod;
+}
+
+.pawn-gallery {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center;
+    padding-bottom: 10px;
+}
+
+.pawn-card {
+    width: 250px;
+    height: 400px;
+    padding: 10px;
+    padding-top: 50px;
+    gap: 0;
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    align-items: center;
+    background: #f1e0c5;
+    border: 1px solid lightgray;
+    border-radius: 5px;
+    box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+}
+
+.pawn-card p {
+    margin: 0;
+    text-align: justify;
+    font-size: 16px;
+}
+
+.pawn-card .pawn {
+    flex-shrink: 0;
+    position: inherit;
+    transform: scale(1.3);
+}
+
+.pawn-card .pawn::after {
+    display: none;
 }
 
 .battlefield {
